[package]
name = "kaydle"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_format = "1.9.0"
nom = "6.2.1"
nom-supreme = "0.5.0"
serde = "1.0.127"
thiserror = "1.0.26"
