[package]
name = "kaydle-primitives"
version = "3.0.0"
edition = "2021"
authors = ["Nathan West <Lucretiel@gmail.com>"]

readme = "README.md"
license = "MPL-2.0"
description = "Low level primitive parsers for KDL, intended as a building block for higher level parsers or deserializers"
repository = "https://github.com/Lucretiel/kaydle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
memchr = "2.5.0"
nom = "7.1.1"
nom-supreme = "0.8.0"
serde = "1.0.139"

[dev-dependencies]
cool_asserts = "1.1.1"
