[package]
name = "kaydle-primitives"
version = "3.0.0"
description = "Low level primitive parsers for KDL, intended as a building block for higher level parsers or deserializers"

edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec.workspace = true
memchr.workspace = true
nom.workspace = true
nom-supreme.workspace = true
serde.workspace = true

[dev-dependencies]
cool_asserts.workspace = true
