[package]
name = "kaydle-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
kaydle = { path = "../kaydle" }
kaydle-primitives = { path = "../kaydle-primitives/" }
serde = { version = "1.0.130", features = [ "derive" ] }
