[package]
name = "kaydle-test"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaydle = { path = "../kaydle" }
anyhow.workspace = true
serde.workspace = true
