[package]
name = "kaydle"
version = "0.2.0"
description = "Serde serializer and deserializer for KDL"

edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaydle-primitives = { path = "../kaydle-primitives/", version = "3.0.0" }
lazy_format.workspace = true
nom.workspace = true
nom-supreme.workspace = true
serde.workspace = true
serde-mobile.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
