[package]
name = "kaydle"
version = "0.2.0"
description = "Serde serializer and deserializer for KDL"

edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
kaydle-primitives = { path = "../kaydle-primitives/", version = "3.0.0" }
nom-supreme.workspace = true
nom.workspace = true
serde-mobile.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
